--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>📘 Biology Dictionary App</h1>
+    <h1>📘 Biology Dictionary Bangla App</h1>
     <p>Download the Android (.apk) version of our Biology Dictionary directly below.</p>
     <a class="download-btn" href="biology-dictionary.apk" download>📥 Download APK</a>
     <p style="margin-top: 10px;">File size: 838 KB | Version: 1.0</p>
